# notion-cli

./: LICENSE  README.md  pyproject.toml
notion_cli/: app.py
