[tool.poetry]
name = "notion_cli"
version = "0.1.0"
description = "CLI for interacting with Notion"
authors = ["Supavit Dumrongprechachan"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
click = "^8.0.1"
notion-client = "^0.6.0"

[tool.poetry.dev-dependencies]
black = "^21.7b0"
flake8 = "^3.9.2"

[tool.poetry.scripts]
notion = "notion_cli.app:run"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
